--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -182,10 +182,11 @@
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
             <li style="padding: 50px;" class="d-inline"><a href="../index.html">Home</a></li>
+            <li style="padding: 50px;" class="d-inline"><a href="../businessEmailCompromisePhishing.html">Scam Overview</a></li>
             <li style="padding: 50px;" class="d-inline"><a href="../../scrollytelly/data.html">Trending Scams</a></li>
+            <li style="padding: 50px;" class="d-inline"><a href="../Quiz/quiz.html">Test Your Knowledge</a></li>
             <li style="padding: 50px;" class="d-inline"><a href="../../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
             <li style="padding: 50px;" class="d-inline"><a href="../scamReport/index.html">Report Phishing Scam</a></li>
-            <li style="padding: 50px;" class="d-inline"><a href="../Quiz/quiz.html">Test Your Knowledge</a></li>
         </ul>        
       </div>
       <hr />
