--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -156,10 +156,11 @@
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
               <li style="padding: 50px;" class="d-inline"><a href="../../frontend/index.html">Home</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="../../frontend/businessEmailCompromisePhishing.html">Scam Overview</a></li>
               <li style="padding: 50px;" class="d-inline"><a href="../../scrollytelly/data.html">Trending Scams</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="../../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
               <li style="padding: 50px;" class="d-inline"><a href="email_detection.html">Detect Phishing Scams</a></li>
               <li style="padding: 50px;" class="d-inline"><a href="../../frontend/scamReport/index.html">Report Phishing Scam</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="../../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
           </ul>        
         </div>
         <hr />
