--- a/frontend/businessEmailCompromisePhishing.html
+++ b/frontend/businessEmailCompromisePhishing.html
@@ -139,12 +139,13 @@
               <div>
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
-                  <li style="padding: 50px;" class="d-inline"><a href="./index.html">Home</a></li>
-                  <li style="padding: 50px;" class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
-                  <li style="padding: 50px;" class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
-                  <li style="padding: 50px;" class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
-                  <li style="padding: 50px;" class="d-inline"><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
-              </ul>        
+                  <li class="d-inline"><a href="./index.html">Home</a></li>
+                    <li class="d-inline"><a href="./businessEmailCompromisePhishing.html">Scam Overview</a></li>
+                    <li class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
+                    <li class="d-inline"><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
+                    <li class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
+                    <li class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
+                </ul>        
             </div>
             <hr />
             <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
