--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,6 +99,20 @@
 
     <div class="card-container">
       <div class="card">
+        <div class="content">
+          <div class="imgBx">
+            <!-- Ref: https://www.freepik.com/free-vector/steal-data-concept_8268968.htm#query=clone%20phishing&position=7&from_view=keyword&track=ais_hybrid&uuid=b10037ea-8885-479f-98ec-de3c56467716 -->
+            <img src="./assets/clonePhishingSmall.jpg">
+          </div>
+          <br>
+          <div class="contentBx">
+            <h3>Scam Overview</h3>
+          </div>
+        </div>
+        <a href="businessEmailCompromisePhishing.html"> Learn More </a>
+      </div>
+
+      <div class="card">
 				<div class="content">
 					<div class="imgBx">
             <!-- Ref: https://www.freepik.com/free-vector/phishing-account-concept_8088554.htm#fromView=search&page=1&position=5&uuid=a6530a06-bff5-44c7-ae7e-2c0adc835ef9 -->
@@ -110,6 +124,20 @@
 					</div>
         </div>
         <a href="../scrollytelly/data.html"> Discover More </a>
+			</div>
+
+      <div class="card">
+				<div class="content">
+					<div class="imgBx">
+            <!-- Ref: https://www.freepik.com/free-vector/illustration-virus-detection_3207974.htm#fromView=search&page=1&position=0&uuid=e1dcaac7-37f1-4d29-bc81-b8ea0a1e1bdc -->
+						<img src="./assets/popupPhishingSmall.jpg">
+					</div>
+          <br>
+					<div class="contentBx">
+						<h3>Test Your Knowledge</h3>
+					</div>
+        </div>
+        <a href="Quiz/quiz.html"> Take The Test </a>
 			</div>
 
       <div class="card">
@@ -140,34 +168,6 @@
         <a href="./scamReport/index.html"> Submit a Report </a>
 			</div>
 
-      <div class="card">
-				<div class="content">
-					<div class="imgBx">
-            <!-- Ref: https://www.freepik.com/free-vector/illustration-virus-detection_3207974.htm#fromView=search&page=1&position=0&uuid=e1dcaac7-37f1-4d29-bc81-b8ea0a1e1bdc -->
-						<img src="./assets/popupPhishingSmall.jpg">
-					</div>
-          <br>
-					<div class="contentBx">
-						<h3>Test Your Knowledge</h3>
-					</div>
-        </div>
-        <a href="Quiz/quiz.html"> Take The Test </a>
-			</div>
-
-      <div class="card">
-				<div class="content">
-					<div class="imgBx">
-            <!-- Ref: https://www.freepik.com/free-vector/steal-data-concept_8268968.htm#query=clone%20phishing&position=7&from_view=keyword&track=ais_hybrid&uuid=b10037ea-8885-479f-98ec-de3c56467716 -->
-						<img src="./assets/clonePhishingSmall.jpg">
-					</div>
-          <br>
-					<div class="contentBx">
-						<h3>Scam Overview</h3>
-					</div>
-        </div>
-        <a href="businessEmailCompromisePhishing.html"> Learn More </a>
-			</div>
-
       <div class="cardEmpty">
 				<div class="content">
 					<div class="imgBx"> 
@@ -191,11 +191,12 @@
         <div>
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
-            <li style="padding: 50px;" class="d-inline"><a href="#">Home</a></li>
-            <li style="padding: 50px;" class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
-            <li style="padding: 50px;" class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
-            <li style="padding: 50px;" class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
-            <li style="padding: 50px;" class="d-inline"><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
+            <li class="d-inline"><a href="#">Home</a></li>
+            <li class="d-inline"><a href="./businessEmailCompromisePhishing.html">Scam Overview</a></li>
+            <li class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
+            <li class="d-inline"><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
+            <li class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
+            <li class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
         </ul>        
       </div>
       <hr />
