--- a/frontend/smishingPhishing.html
+++ b/frontend/smishingPhishing.html
@@ -46,24 +46,22 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html"
-                      >Home</a
-                    >
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="./businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./Quiz/quiz.html">Test Your Knowledge</a>
+                  </li>
                   </li>
                   <li class="nav-item"></li>
                     <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="scamReport/index.html">Report Phishing Scam</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
-                  </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
               </div>
@@ -135,12 +133,13 @@
               <div>
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
-                  <li style="padding: 50px;" class="d-inline"><a href="./index.html">Home</a></li>
-                  <li style="padding: 50px;" class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
-                  <li style="padding: 50px;" class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
-                  <li style="padding: 50px;" class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
-                  <li style="padding: 50px;" class="d-inline"><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
-              </ul>        
+                  <li class="d-inline"><a href="index.html">Home</a></li>
+                  <li class="d-inline"><a href="./businessEmailCompromisePhishing.html">Scam Overview</a></li>
+                    <li class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
+                    <li class="d-inline"><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
+                    <li class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
+                    <li class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
+                  </ul>        
             </div>
             <hr />
             <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
