--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -185,16 +185,19 @@
                 <a href="../frontend/index.html">Home</a>
               </li>
               <li style="padding: 50px;" class="d-inline">
-                <a href="../scrollytelly/data.html">Trending Scams</a>
+                <a href="../frontend/businessEmailCompromisePhishing.html">Scam Overview</a>
+              </li>
+              <li style="padding: 50px;" class="d-inline">
+                <a href="#">Trending Scams</a>
+              </li>
+              <li style="padding: 50px;" class="d-inline">
+                <a href="../frontend/Quiz/quiz.html">Test Your Knowledge</a>
               </li>
               <li style="padding: 50px;" class="d-inline">
                 <a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a>
               </li>
               <li style="padding: 50px;" class="d-inline">
                 <a href="../frontend/scamReport/index.html">Report Phishing Scam</a>
-              </li>
-              <li style="padding: 50px;" class="d-inline">
-                <a href="../frontend/Quiz/quiz.html">Test Your Knowledge</a>
               </li>
             </ul>        
         </div>
