--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -68,7 +68,7 @@
                     offering insights into scam targets, locations, and financial losses. By raising awareness 
                     and improving digital literacy, we aim to better protect seniors from falling victim to scams.
                     <br></br>
-                    Click the arrow on the right to start
+                    Scroll or click the arrow on the right to start
                 </p>
             </div>
         </section>
