--- a/frontend/popupPhishing.html
+++ b/frontend/popupPhishing.html
@@ -121,11 +121,9 @@
         </div>
 
         <!-- Add a navigation button to the next scam page -->
-        <!--
         <div class="btn-container">
           <button class="button-22" id="popupPhishingNextBtn">Go to the Next Scam Page (Search Engine Phishing)</button>
         </div>
-        -->
 
         <!-- Footer -->
         <footer class="footer bg-light text-center">
@@ -156,6 +154,10 @@
               if (hrefValue.includes('popup')) {
                   link.classList.add('active');
               }
+          });
+
+          document.getElementById('popupPhishingNextBtn').addEventListener('click', function() {
+              window.location.href = './searchEnginePhishing.html';
           });
         </script>
 
