added link to trending scam page in each edu page

--- a/frontend/spearPhishing.html
+++ b/frontend/spearPhishing.html
@@ -118,9 +118,16 @@
               <p>If you suspect you've fallen victim to a spear phishing attack, immediately disconnect from the internet and avoid interacting with any suspicious emails or links. Change your passwords for any accounts that may have been compromised, and enable two-factor authentication to enhance security. Run a thorough scan with reputable antivirus software to detect any malware that might have been installed. Monitor your financial statements and accounts for unauthorized transactions and report any suspicious activity to your bank or service provider. Finally, educate yourself about phishing tactics to better recognize and avoid similar threats in the future.</p>
             </section>
 
+            <section>
+              <h6>
+                Discover the Latest <a href="../../scrollytelly/data.html">Trending Scams</a>. Learn about the newest fraud tactics targeting unsuspecting individuals.
+              </h6>
+            </section>
+            <br>
+
             <!-- Add a navigation button to the next scam page -->
             <div class="btn-container">
-              <button class="button-22" id="spearPhishingNextBtn">Go to the Next Scam Page (Voice Phising)</button>
+              <button class="button-22 next-btn" id="spearPhishingNextBtn">Go to the Next Scam Page (Voice Phising)</button>
             </div>
           </div>
         </div>
