--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -117,6 +117,12 @@
               <br>
               <p>If you suspect you’ve been targeted by a fraudulent call, hang up immediately and do not engage further. Review your bank and credit card statements for any unauthorized transactions and report them to your financial institution right away. Change passwords for any accounts that may have been compromised, and enable two-factor authentication for added security. If you provided personal information during the call, consider placing a fraud alert on your credit report and monitoring your accounts closely for unusual activity. Educate yourself on common scam tactics to better recognize and avoid similar threats in the future.</p>
             </section>
+
+            <section>
+              <h6>
+                Discover the Latest <a href="../../scrollytelly/data.html">Trending Scams</a>. Learn about the newest fraud tactics targeting unsuspecting individuals.
+              </h6>
+            </section>
           </div>
         </div>
 
