--- a/frontend/businessEmailCompromisePhishing.html
+++ b/frontend/businessEmailCompromisePhishing.html
@@ -125,9 +125,16 @@
               <p>If you suspect a Business Email Compromise (BEC) incident, immediately disconnect affected devices from the internet and change passwords for compromised accounts. Notify your IT and security teams for investigation and mitigation. Review financial transactions for unauthorized activity and analyze email logs to identify any suspicious behavior. Monitor all accounts closely for unusual activities and inform employees about the incident to raise awareness. Report the BEC incident to law enforcement and relevant regulatory bodies. Finally, reassess and strengthen security protocols, including training employees to recognize phishing and BEC scams, and consider enrolling in identity theft protection services if sensitive data was compromised.</p>
             </section>
 
+            <section>
+              <h6>
+                Discover the Latest <a href="../../scrollytelly/data.html">Trending Scams</a>. Learn about the newest fraud tactics targeting unsuspecting individuals.
+              </h6>
+            </section>
+            <br>
+            
             <!-- Add a navigation button to the next scam page -->
             <div class="btn-container">
-              <button class="button-22" id="BECNextBtn">Go to the Next Scam Page (Clone Phishing)</button>
+              <button class="button-22 next-btn" id="BECNextBtn">Go to the Next Scam Page (Clone Phishing)</button>
             </div>
           </div>
         </div>
