--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -121,9 +121,16 @@
               <p>If you suspect you've fallen victim to a clone phishing attack, immediately disconnect from the internet and avoid clicking any links. Change passwords for compromised accounts, run a full security scan for malware, and review your financial accounts for unauthorized activity. Notify your IT or security team if you're using a work device, and educate others about the attack. Monitor for further phishing attempts and consider enabling account alerts. If sensitive information was compromised, consider enrolling in identity theft protection services for added security.</p>
             </section>
 
+            <section>
+              <h6>
+                Discover the Latest <a href="../../scrollytelly/data.html">Trending Scams</a>. Learn about the newest fraud tactics targeting unsuspecting individuals.
+              </h6>
+            </section>
+            <br>
+
             <!-- Add a navigation button to the next scam page -->
             <div class="btn-container">
-              <button class="button-22" id="clonePhishingNextBtn">Go to the Next Scam Page (Pop-up Phishing)</button>
+              <button class="button-22 next-btn" id="clonePhishingNextBtn">Go to the Next Scam Page (Pop-up Phishing)</button>
             </div>
           </div>
         </div>
