--- a/frontend/popupPhishing.html
+++ b/frontend/popupPhishing.html
@@ -118,9 +118,16 @@
               <p>If you suspect you've fallen victim to a pop-up phishing attack, first close the pop-up and avoid clicking any links or buttons. Run a full scan with reliable antivirus software to detect and remove any malware that may have been installed. Change any passwords for accounts that may have been compromised and monitor your financial accounts for unauthorized transactions. Ensure your browser’s pop-up blocker is activated and consider clearing your browser cache and cookies. Educate yourself about recognizing phishing attempts to prevent future incidents. If you provided personal information, consider enrolling in identity theft protection services for added security.</p>
             </section>
 
+            <section>
+              <h6>
+                Discover the Latest <a href="../../scrollytelly/data.html">Trending Scams</a>. Learn about the newest fraud tactics targeting unsuspecting individuals.
+              </h6>
+            </section>
+            <br>
+
             <!-- Add a navigation button to the next scam page -->
             <div class="btn-container">
-              <button class="button-22" id="popupPhishingNextBtn">Go to the Next Scam Page (Search Engine Phishing)</button>
+              <button class="button-22 next-btn" id="popupPhishingNextBtn">Go to the Next Scam Page (Search Engine Phishing)</button>
             </div>
           </div>
         </div>
