--- a/frontend/searchEnginePhishing.html
+++ b/frontend/searchEnginePhishing.html
@@ -120,9 +120,16 @@
               <p>If you suspect you’ve fallen victim to a search engine phishing attack, immediately disconnect your device from the internet and close the fraudulent website without entering any personal information. Run a full scan with reputable antivirus software to detect and remove any malware that may have been installed. Change the passwords for any accounts you accessed and monitor your financial statements for unauthorized transactions. Educate yourself on recognizing phishing attempts to prevent future incidents, and consider enrolling in identity theft protection services if personal information was compromised. Finally, report the phishing attack to relevant authorities, such as the Federal Trade Commission (FTC) or local law enforcement.</p>
             </section>
 
+            <section>
+              <h6>
+                Discover the Latest <a href="../../scrollytelly/data.html">Trending Scams</a>. Learn about the newest fraud tactics targeting unsuspecting individuals.
+              </h6>
+            </section>
+            <br>
+
             <!-- Add a navigation button to the next scam page -->
             <div class="btn-container">
-              <button class="button-22" id="searchEnginePhishingNextBtn">Go to the Next Scam Page (Smishing)</button>
+              <button class="button-22 next-btn" id="searchEnginePhishingNextBtn">Go to the Next Scam Page (Smishing)</button>
             </div>
           </div>
         </div>
