click to scamwatch, scroll button move down

--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -63,7 +63,11 @@
             <div class="container">
                 <h1 class="display-4">How are senior Australians being targeted by scammers?</h1>
                 <p class="lead"> 
-                  This report integrates <a href="https://www.scamwatch.gov.au/research-and-resources/scam-statistics" target="_blank" rel="noopener noreferrer" onclick="alert('You are being redirected to the https://www.scamwatch.gov.au/research-and-resources/scam-statistics');">Australian Government</a>
+                  This report integrates <a href="https://www.scamwatch.gov.au/research-and-resources/scam-statistics" target="_blank" rel="noopener noreferrer" 
+                  onclick="if (confirm('Do you want to leave the current website and proceed to Australia\'s official website about phishing scams?')) { 
+                    window.open(this.href, '_blank'); 
+                  } 
+                  return false;">Australian Government</a>                            
                     data and community-submitted <a href="../frontend/scamReport/index.html">reports</a>, 
                     offering insights into scam targets, locations, and financial losses. By raising awareness 
                     and improving digital literacy, we aim to better protect seniors from falling victim to scams.
