example not examples

--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -93,7 +93,7 @@
 
             <section class="scam-real-life-examples-section">
                 <div class="content">
-                    <h2>Real-Life Examples</h2>
+                    <h2>Real-Life Example</h2>
                     <p>
                       Messages in a clone phishing attack are never exactly the same, but they often contain similar elements. Typically, they are crafted to convey a sense of urgency and include a malicious link or file attachment intended to deceive the recipient.
                     </p>
