--- a/frontend/searchEnginePhishing.html
+++ b/frontend/searchEnginePhishing.html
@@ -91,7 +91,7 @@
 
             <section class="scam-real-life-examples-section">
                 <div class="content">
-                    <h2>Real-Life Examples</h2>
+                    <h2>Real-Life Example</h2>
                     <p>
                       When you search for a popular website, like Amazon.com, on a search engine and click on one of the top results, you may find yourself redirected to a convincing but fraudulent site, such as Am@zon.com. This fake version is designed to closely mimic the original site, tricking users into entering sensitive information or making unauthorized purchases.
                     </p>
