--- a/frontend/smishingPhishing.html
+++ b/frontend/smishingPhishing.html
@@ -90,7 +90,7 @@
 
             <section class="scam-real-life-examples-section">
                 <div class="content">
-                    <h2>Real-Life Examples</h2>
+                    <h2>Real-Life Example</h2>
                     <p>
                       A common smishing attack often involves using well-known brand names along with deceptive links that claim to direct users to the brand's website. Typically, the attacker informs the recipient that they have won money or provides a malicious link for tracking packages, aiming to trick them into clicking the link and potentially revealing sensitive information or downloading malware.
                     </p>
