--- a/frontend/spearPhishing.html
+++ b/frontend/spearPhishing.html
@@ -89,7 +89,7 @@
 
             <section class="scam-real-life-examples-section">
                 <div class="content">
-                    <h2>Real-Life Examples</h2>
+                    <h2>Real-Life Example</h2>
                     <p>
                       Between 2013 and 2015, Evaldas Rimasauskas impersonated Quanta Computer, a Taiwanese hardware supplier that provided services to tech giants Google and Facebook. He sent fake invoices totaling $122 million—$99 million to Google and $23 million to Facebook—over nearly three years before being arrested. Rimasauskas was subsequently sentenced to 30 years in prison for his fraudulent activities.
                     </p>
