--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -89,7 +89,7 @@
 
             <section class="scam-real-life-examples-section">
                 <div class="content">
-                    <h2>Real-Life Examples</h2>
+                    <h2>Real-Life Example</h2>
                     <p>
                       A prevalent smishing attack often involves using well-known brand names along with deceptive links that claim to lead to the brand's official website. In these attacks, the scammer typically informs the recipient that they have won money or provides a malicious link for tracking packages. This tactic aims to trick users into clicking the link, potentially leading to the theft of personal information or the download of malware.
                     </p>
