--- a/frontend/popupPhishing.html
+++ b/frontend/popupPhishing.html
@@ -89,7 +89,7 @@
 
             <section class="scam-real-life-examples-section">
                 <div class="content">
-                    <h2>Real-Life Examples</h2>
+                    <h2>Real-Life Example</h2>
                     <p>
                       Users have occasionally encountered pop-ups claiming they qualify for AppleCare renewal, suggesting they can receive extended protection for their Apple devices. However, these offers are fraudulent and intended to deceive users.
                     </p>
