--- a/frontend/businessEmailCompromisePhishing.html
+++ b/frontend/businessEmailCompromisePhishing.html
@@ -95,7 +95,6 @@
                 <div class="content">
                     <h2>Real-Life Example</h2>
                     <p>
-                      Even smaller charities are at risk of Business Email Compromise (BEC). For instance, 
                       Treasure Island, a homeless charity, lost $625,000 to a BEC scam when hackers impersonated 
                       Executive Director Sherry Williams. They manipulated the details on a legitimate invoice and 
                       altered the wire transfer instructions to redirect funds for their own benefit.</p>
@@ -111,10 +110,10 @@
                 <div class="list-container">
                     <ol class="gradient-list">
                       <li>Always call to confirm requests for money transfers or sensitive information instead of replying to the email.</li>
-                      <li>Implement two-factor authentication for company emails to enhance security against unauthorized access.</li>
-                      <li>Limit access to critical company information to only necessary personnel.</li>
+                      <li>Implement two-factor authentication for company emails to enhance security against unauthorised access.</li>
+                      <li>Limit access of critical company information to only necessary personnel.</li>
                       <li>Set up alerts for any unusual activities in company accounts.</li>
-                      <li>Educate employees on recognizing suspicious emails, especially those that appear urgent and seem to come from executives.</li>
+                      <li>Educate employees on recognising suspicious emails, especially those that appear urgent and seem to come from executives.</li>
                     </ol>
                 </div>
             </section>
@@ -122,7 +121,7 @@
             <section class="how-to-prevent-section">
               <h2>Recovery Steps</h2>
               <br>
-              <p>If you suspect a Business Email Compromise (BEC) incident, immediately disconnect affected devices from the internet and change passwords for compromised accounts. Notify your IT and security teams for investigation and mitigation. Review financial transactions for unauthorized activity and analyze email logs to identify any suspicious behavior. Monitor all accounts closely for unusual activities and inform employees about the incident to raise awareness. Report the BEC incident to law enforcement and relevant regulatory bodies. Finally, reassess and strengthen security protocols, including training employees to recognize phishing and BEC scams, and consider enrolling in identity theft protection services if sensitive data was compromised.</p>
+              <p>If you suspect a Business Email Compromise (BEC) incident, immediately disconnect affected devices from the internet and change passwords for compromised accounts. Notify your IT and security teams for investigation and mitigation. Review financial transactions for unauthorised activity and analyse email logs to identify any suspicious behaviour. Monitor all accounts closely for unusual activities and inform employees about the incident to raise awareness. Report the BEC incident to law enforcement and relevant regulatory bodies. Finally, reassess and strengthen security protocols, including training employees to recognise phishing and BEC scams, and consider enrolling in identity theft protection services if sensitive data was compromised.</p>
             </section>
 
             <section>
