clone fix wording

--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -86,8 +86,7 @@
                 <h1>Clone Phishing</h1>
                 <p>Clone phishing is a type of cyberattack in which scammers replicate a legitimate email or message that you or your employees have previously received. 
                   They create an almost identical copy of the original communication, making subtle changes to deceive the recipient. </p>
-                <p>The goal is typically to entice the recipient into clicking a malicious link, downloading malware, or providing sensitive information such as passwords or credit card details.
-                    Usually, they'll try to get you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.
+                <p>The goal is usually to trick the recipient into clicking a malicious link, downloading malware, or providing sensitive information like passwords or credit card details.
                 </p>
             </section>
 
@@ -118,7 +117,7 @@
             <section class="how-to-prevent-section">
               <h2>Recovery Steps</h2>
               <br>
-              <p>If you suspect you've fallen victim to a clone phishing attack, immediately disconnect from the internet and avoid clicking any links. Change passwords for compromised accounts, run a full security scan for malware, and review your financial accounts for unauthorized activity. Notify your IT or security team if you're using a work device, and educate others about the attack. Monitor for further phishing attempts and consider enabling account alerts. If sensitive information was compromised, consider enrolling in identity theft protection services for added security.</p>
+              <p>If you suspect you've fallen victim to a clone phishing attack, immediately disconnect from the internet and avoid clicking any links. Change passwords for compromised accounts, run a full security scan for malware, and review your financial accounts for unauthorised activity. Notify your IT or security team if you're using a work device, and educate others about the attack. Monitor for further phishing attempts and consider enabling account alerts. If sensitive information was compromised, consider enrolling in identity theft protection services for added security.</p>
             </section>
 
             <section>
