--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -81,7 +81,7 @@
       </p>
       <div class="form-group">
         <label for="emailContent"
-          >Copy and paste your email content and/or website links here:</label
+          ><b>Please type or paste the suspected phishing scam or website link here:</b></label
         >
         <textarea class="form-control" id="emailContents" rows="10" oninput="countWords(this)"></textarea>
 <!-- Word counter -->
