--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -49,7 +49,7 @@
       <!-- Form starts here -->
       <form id="scamReportForm" method="POST" action="https://www.seniorsafe.info/apif/data/api/submit_report">
         <div class="form-group">
-          <label for="phishingUrl"><b>Please type or paste the suspected phishing scam or URL:</b></label>
+          <label for="phishingUrl"><b>Please type or paste the suspected phishing scam or website link:</b></label>
            <!-- Textarea for word count -->
     <textarea id="phishingUrl" class="form-control" rows="9" oninput="countWords(this)"></textarea>
     
