--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -122,7 +122,7 @@
 
             <section>
               <h6>
-                Discover the Latest <a href="../../scrollytelly/data.html">Trending Scams</a>. Learn about the newest fraud tactics targeting unsuspecting individuals.
+                Discover the latest <a href="../../scrollytelly/data.html">trending scams</a>. Learn about the newest fraud tactics targeting unsuspecting individuals.
               </h6>
             </section>
             <br>
