--- a/frontend/searchEnginePhishing.html
+++ b/frontend/searchEnginePhishing.html
@@ -93,7 +93,7 @@
                 <div class="content">
                     <h2>Real-Life Example</h2>
                     <p>
-                      When you search for a popular website, like Amazon.com, on a search engine and click on one of the top results, you may find yourself redirected to a convincing but fraudulent site, such as Am@zon.com. This fake version is designed to closely mimic the original site, tricking users into entering sensitive information or making unauthorized purchases.
+                      When you search for a popular website, like Amazon.com, on a search engine and click on one of the top results, you may find yourself redirected to a convincing but fraudulent site, such as Am@zon.com. This fake version is designed to closely mimic the original site, tricking users into entering sensitive information or making unauthorised purchases.
                     </p>
                 </div>
                 <div class="image-container">
@@ -109,7 +109,7 @@
                       <li>Before clicking on a search result, carefully examine the website address to ensure it looks correct and does not contain unusual spellings.</li>
                       <li>Stick to well-known search engines like Google or Bing, as they are more effective at blocking fake websites.</li>
                       <li>Verify that the website address begins with “https” and displays a padlock symbol before entering any personal information.</li>
-                      <li>Utilize browser tools or extensions that can alert you to unsafe websites.</li>
+                      <li>Utilise browser tools or extensions that can alert you to unsafe websites.</li>
                     </ol>
                 </div>
             </section>
@@ -117,7 +117,7 @@
             <section class="how-to-prevent-section">
               <h2>Recovery Steps</h2>
               <br>
-              <p>If you suspect you’ve fallen victim to a search engine phishing attack, immediately disconnect your device from the internet and close the fraudulent website without entering any personal information. Run a full scan with reputable antivirus software to detect and remove any malware that may have been installed. Change the passwords for any accounts you accessed and monitor your financial statements for unauthorized transactions. Educate yourself on recognizing phishing attempts to prevent future incidents, and consider enrolling in identity theft protection services if personal information was compromised. Finally, report the phishing attack to relevant authorities, such as the Federal Trade Commission (FTC) or local law enforcement.</p>
+              <p>If you suspect you’ve fallen victim to a search engine phishing attack, immediately disconnect your device from the internet and close the fraudulent website without entering any personal information. Run a full scan with reputable antivirus software to detect and remove any malware that may have been installed. Change the passwords for any accounts you accessed and monitor your financial statements for unauthorised transactions. Educate yourself on recognising phishing attempts to prevent future incidents, and consider enrolling in identity theft protection services if personal information was compromised. Finally, report the phishing attack to relevant authorities, such as the Federal Trade Commission (FTC) or local law enforcement.</p>
             </section>
 
             <section>
