--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -104,7 +104,7 @@
                 <h2>How to Prevent</h2>
                 <div class="list-container">
                     <ol class="gradient-list">
-                        <li>If you realize a call isn’t from a real person, it’s perfectly acceptable to hang up; robots don’t have feelings.</li>
+                        <li>If you realise a call isn’t from a real person, it’s perfectly acceptable to hang up; robots don’t have feelings.</li>
                         <li>Avoid responding to voice prompts; don’t press buttons or say “yes” to speak to an operator.</li>
                         <li>Verify the caller’s identity by asking for their name and then calling back using the official number from the company's website—never use a number they provide.</li>
                         <li>Never share sensitive information over the phone, as legitimate government agencies, banks, or credit card companies will never ask for personal details in this manner.</li>
@@ -115,7 +115,7 @@
             <section class="how-to-prevent-section">
               <h2>Recovery Steps</h2>
               <br>
-              <p>If you suspect you’ve been targeted by a fraudulent call, hang up immediately and do not engage further. Review your bank and credit card statements for any unauthorized transactions and report them to your financial institution right away. Change passwords for any accounts that may have been compromised, and enable two-factor authentication for added security. If you provided personal information during the call, consider placing a fraud alert on your credit report and monitoring your accounts closely for unusual activity. Educate yourself on common scam tactics to better recognize and avoid similar threats in the future.</p>
+              <p>If you suspect you’ve been targeted by a fraudulent call, hang up immediately and do not engage further. Review your bank and credit card statements for any unauthorised transactions and report them to your financial institution right away. Change passwords for any accounts that may have been compromised, and enable two-factor authentication for added security. If you provided personal information during the call, consider placing a fraud alert on your credit report and monitoring your accounts closely for unusual activity. Educate yourself on common scam tactics to better recognise and avoid similar threats in the future.</p>
             </section>
 
             <section>
