--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -41,7 +41,7 @@
         <p>If you've encountered a suspicious email, website, or message that you believe might be a 
           phishing scam, we encourage you to report it using the trusted form below. By sharing the details of 
           the scam, you help us in our mission to protect others from falling victim to similar attacks. 
-          Your report will be included in our secure <a href="../../scrollytelly/data.html">Trending Scams </a>
+          Your report will be included in our secure <a href="../../scrollytelly/data.html">trending scams </a>
           report. Please ensure you provide as much 
           detail as possible to help others stay safe.</p>
       </section>
