--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -175,7 +175,7 @@
         </div>
     </main>
     <div class="container stepbottom">
-      If you're uncertain about the authenticity of a message you've received, use our <a href="../fraud_detection/backend/email_detection.html">Scam Detection Tool</a> to verify it.
+      If you're uncertain about the authenticity of a message you've received, use our <a href="../fraud_detection/backend/email_detection.html">scam detection tool</a> to verify it.
       If you've recently fallen victim to a scam or come across a suspicious activity, please <a href="../frontend/scamReport/index.html">submit a report</a> and help us in the fight against scammers.
     <br></br>
     </div>
