--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -164,7 +164,7 @@
           <label for="consent">I confirm that the information provided is true and does not contain sensitive information. 
             I consent to the storage and processing of the submitted details for the purpose of phishing 
             scam investigation and prevention. I understand that the information will be used solely for 
-            improving phishing detection and response efforts and will be displayed on the <a href="../../scrollytelly/data.html">Trending Scams </a>
+            improving phishing detection and response efforts and will be displayed on the <a href="../../scrollytelly/data.html">trending scams </a>
             report.<span class="required">*</span></label>
         </div>
 
