--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,7 +74,7 @@
       <p class="intro-body">
         We’re here to help you recognise common phishing scams targeting senior Australians and how to stay safe online.
       </p>
-      <a class="btn-blue" href="businessEmailCompromisePhishing.html" role="button">Learn about different phishing scams</a>
+      <a class="btn-blue" href="businessEmailCompromisePhishing.html" role="button">Learn about phishing scams</a>
     </div>
   </section>
 
