click logo to go home

--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -19,9 +19,9 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../frontend/index.html">
           <img src="resources/logof.jpg" alt="Senior Safe Logo" class="logo"/>Senior Safe
-        </a>
+        </a>        
         <button
           class="navbar-toggler"
           type="button"
