--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -28,13 +28,13 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../../frontend/index.html">
           <img
             src="../../frontend/resources/logof.jpg"
             alt="Senior Safe Logo"
             class="logo"
           />Senior Safe
-        </a>
+        </a>        
         <button
           class="navbar-toggler"
           type="button"
