--- a/frontend/Quiz/quiz.html
+++ b/frontend/Quiz/quiz.html
@@ -13,9 +13,9 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../resources/logof.jpg" alt="Senior Safe Logo" class="logo">Senior Safe
-            </a>
+              </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
