--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -12,9 +12,9 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="../../frontend/index.html">
         <img src="../../frontend/resources/logof.jpg" alt="Senior Safe Logo" class="logo" />Senior Safe
-      </a>
+      </a>      
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
