--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -63,7 +63,7 @@
               <a class="nav-link" href="../../frontend/Quiz/quiz.html">Test Your Knowledge</a>
             </li>
             <li class="nav-item"></li>
-              <a class="nav-link active" href="#">Detect Phishing Scams</a>
+              <a class="nav-link active" href="email_detection.html">Detect Phishing Scams</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../../frontend/scamReport/index.html">Report Phishing Scam</a>
