--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="../frontend/businessEmailCompromisePhishing.html">Scam Overview</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Trending Scams</a>
+              <a class="nav-link" href="data.html">Trending Scams</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../frontend/Quiz/quiz.html">Test Your Knowledge</a>
