--- a/frontend/Quiz/quiz.html
+++ b/frontend/Quiz/quiz.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="../../scrollytelly/data.html">Trending Scams</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"
+                        <a class="nav-link" href="quiz.html"
                           >Test Your Knowledge <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item"></li>
