--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -27,7 +27,7 @@
           <li class="nav-item"><a class="nav-link" href="../../scrollytelly/data.html">Trending Scams</a></li>
           <li class="nav-item"><a class="nav-link" href="../../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
           <li class="nav-item"><a class="nav-link" href="../../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
-          <li class="nav-item"><a class="nav-link active" href="#">Report Phishing Scam</a></li>
+          <li class="nav-item"><a class="nav-link active" href="index.html">Report Phishing Scam</a></li>
         </ul>
       </div>
     </div>
