--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -77,8 +77,8 @@
       <h1>Phishing Email and website link Detection</h1>
       <br>
       <p>
-        Check whether an email or website link is malicious by using our phishing detection tool. Simply copy and paste the content into the box below, and our system will analyze it to help you stay safe from phishing scams.
-        Please make sure your input content has at least 10 English words or one url
+        Check whether an email or website link is malicious by using our phishing detection tool. Simply copy and paste the content into the box below, and our system will analyse it to help you stay safe from phishing scams.
+        Kindly ensure that your input includes at least 10 English words or a single URL.
       </p>
       <div class="form-group">
         <label for="emailContent"
