--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -174,11 +174,11 @@
             </div>
         </div>
     </main>
-    <div class="container stepbottom" style="padding: 20px;">
+    <div class="container stepbottom">
       If you're uncertain about the authenticity of a message you've received, use our <a href="../fraud_detection/backend/email_detection.html">scam detection tool</a> to verify it.
       If you've recently fallen victim to a scam or come across a suspicious activity, please <a href="../frontend/scamReport/index.html">submit a report</a> and help us in the fight against scammers.
     <br></br>
-</div>
+    </div>
 
     <footer class="footer bg-light text-center">
       <div class="container" style>
